Supplementary release notes

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,15 +1,24 @@
 LWUIT Birthdays
 =========================
 
-LWUIT Birthdays is an example project demonstrating how to use the LWUIT
-Calendar component together with the Series 40 PIM APIs to create a simple
-Birthdays application.
+Birthdays is a project demonstrating how to use the LWUIT Calendar component
+together with the Series 40 PIM APIs to create a simple Birthdays application.
+
+This example application is hosted in Nokia Developer Projects:
+- http://projects.developer.nokia.com/LWUIT_Birthdays
+
+For more information on implementation and porting, visit the wiki pages:
+- http://projects.developer.nokia.com/LWUIT_Birthdays/wiki
 
 
 1. Usage
 -------------------------------------------------------------------------------
 
-TODO
+The MIDlet starts in the "show upcoming birthdays" view that populates a list
+of upcoming birthdays with data from the phone address book. The user can
+choose to add new birthday entries by either creating a new contact, or
+assign a birthday with to an existing PIM contact, using the LWUIT Calendar
+component.
 
 
 2. Prerequisites
@@ -19,20 +28,20 @@ Java ME basics
 LWUIT basics
 
 
-3. Important classes
+3. Important files
 -------------------------------------------------------------------------------
 
-TODO
-
+BirthdayMidlet.java: MIDlet entry point, handling transition between views
+BirthdayListModel.java: manages the list of birthdays and their contacts
+BirthdaySorter.java: sorts a Vector of birthdays in the order of future occurrence
+PIMContactHandler.java: accessing PIM APIs
 
 4. Compatibility
 -------------------------------------------------------------------------------
 
-Series 40 6th Edition and newer devices which have a 240px wide or wider 
-screen.
+Series 40 phones with touch capatibilities, e.g. Nokia Asha 311 or Nokia X3-02.
 
-Tested on: TODO
-Developed with: Netbeans 7.2 and Nokia SDK 2.0 for Java.
+Developed with Netbeans 7.2 and Nokia SDK 2.0 for Java.
 
 4.1 Required capabilities
 -------------------------
@@ -42,7 +51,8 @@ CLDC 1.1, MIDP 2.0 and, PIM API (JSR-75).
 4.2 Known issues
 ----------------
 
-None.
+- The Calendar application on S40 6th edition devices may sometimes show
+  birthdays to appear on a different date than the one where they're created.
 
 
 5. Building, installing, and running the application
@@ -57,14 +67,14 @@ added to NetBeans.
 5.2 Building
 ------------
 
-The project can be easily opened in NetBeans by selecting 'Open Project' 
-from the File menu and selecting the application. Building is done by
-selecting 'Build main project'.
+The project can be easily opened in NetBeans by selecting 'Open Project' from
+the File menu and selecting the application. Building is done by selecting
+'Build main project'.
 
 5.3 Series 40 device
 --------------------
 
-You can istall the application on a phone by transferring the JAR file 
+You can install the application on a phone by transferring the JAR file
 via Nokia Suite or over Bluetooth.
 
 
@@ -89,4 +99,4 @@ Nokia SDK for Java
 8. Version history
 -------------------------------------------------------------------------------
 
-v1.0    Initial release.
+1.0 Initial release in Nokia Developer projects.
