--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,8 +1,9 @@
 LWUIT Birthdays
-=========================
+===============
 
-Birthdays is a project demonstrating how to use the LWUIT Calendar component
-together with the Series 40 PIM APIs to create a simple Birthdays application.
+LWUIT Birthdays is a MIDlet that demonstrates how to use the LWUIT Calendar 
+component together with the Java ME PIM API (JSR-75) to create a simple 
+Birthdays application.
 
 This example application is hosted in Nokia Developer Projects:
 - http://projects.developer.nokia.com/LWUIT_Birthdays
@@ -14,10 +15,10 @@ For more information on implementation and porting, visit the wiki pages:
 1. Usage
 -------------------------------------------------------------------------------
 
-The MIDlet starts in the "show upcoming birthdays" view that populates a list
+The MIDlet starts in a "show upcoming birthdays" view that populates a list
 of upcoming birthdays with data from the phone address book. The user can
-choose to add new birthday entries by either creating a new contact, or
-assign a birthday with to an existing PIM contact, using the LWUIT Calendar
+choose to add new birthday entries by either creating a new contact, or 
+assigning a birthday to an existing PIM contact, using the LWUIT Calendar
 component.
 
 
@@ -39,19 +40,19 @@ PIMContactHandler.java: accessing PIM APIs
 4. Compatibility
 -------------------------------------------------------------------------------
 
-Series 40 phones with touch capatibilities, e.g. Nokia Asha 311 or Nokia X3-02.
+Series 40 phones with touch capabilities, e.g. Nokia Asha 311 or Nokia X3-02.
 
 Developed with Netbeans 7.2 and Nokia SDK 2.0 for Java.
 
 4.1 Required capabilities
 -------------------------
 
-CLDC 1.1, MIDP 2.0 and, PIM API (JSR-75).
+CLDC 1.1, MIDP 2.0, and PIM API (JSR-75).
 
 4.2 Known issues
 ----------------
 
-- The Calendar application on S40 6th edition devices may sometimes show
+- The Calendar application on Series 40 6th edition devices may sometimes show
   birthdays to appear on a different date than the one where they're created.
 
 
